# QtTimerPractice

./: .gitignore  README.md
MyTimer/: CMakeLists.txt  Delegate.cpp  Delegate.h  TimeModel.cpp  TimerModel.h  TimerView.cpp  TimerView.h  main.cpp  mainwindow.cpp  mainwindow.h  timermodel.cpp  timerview.ui
MyTimer/models/: TimeModel.cpp  TimerModel.h
MyTimer/views/: TimerView.cpp  TimerView.h  mainwindow.ui  timerview.ui
